vault-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault
spec:
  type: NodePort
  selector:
    app: vault-application
  ports:
    - port: 8088
      targetPort: 8088
      nodePort: 30999
