vault-chart/templates/virtaulService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-virtualservice
  namespace: vault
spec:
  hosts:
  - "vault.example.com"  # replace with your actual hostname
  gateways:
  - vault-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: vault-service.vault.svc.cluster.local
          port:
            number: 8088
      rewrite:
        uri: "/"
        authority: vault-service.vault.svc.cluster.local:8088
